--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,4 @@
-<nav class="navbar navbar-light">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">conduit</a>
-    <input class="form-control form-control-sm search-input" type="text" placeholder="Keyword">
-    <button class="btn btn-sm btn-primary">
-      <i class="ion-search"></i>
-    </button>
-  </div>
-</nav>
+<app-header></app-header>
 
 <div class="home-page">
 
@@ -19,81 +11,14 @@
 
   <div class="container page">
     <div class="row">
-
       <div class="col-md-9">
-        <div class="feed-toggle">
-          <ul class="nav nav-pills outline-active">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Article List</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="post-preview">
-          <div class="post-meta">
-            <a href="profile.html">
-              <img src="http://i.imgur.com/Qr71crq.jpg" />
-            </a>
-            <div class="info">
-              <a href="profile.html" class="author">Eric Simons</a>
-              <span class="date">January 20th</span>
-            </div>
-            <button class="btn btn-outline-primary btn-sm pull-xs-right">
-              <i class="ion-heart"></i> 29
-            </button>
-          </div>
-          <a href="post.html" class="preview-link">
-            <h1>How to build webapps that scale</h1>
-            <p>In my demo, the holy grail layout is nested inside a document, so there's no body or main tags like shown above.
-              Regardless, we're interested in the class names and the appearance of sections in the markup as opposed to
-              the actual elements themselves. In particular, take note of the modifier classes used on the two sidebars,
-              and the trivial order in which they appear in the markup. Let's break this down to paint a clear picture
-              of what's happening...</p>
-            <span>Read more...</span>
-          </a>
-        </div>
-
-        <div class="post-preview">
-          <div class="post-meta">
-            <a href="profile.html">
-              <img src="http://i.imgur.com/N4VcUeJ.jpg" />
-            </a>
-            <div class="info">
-              <a href="profile.html" class="author">Albert Pai</a>
-              <span class="date">January 20th</span>
-            </div>
-            <button class="btn btn-outline-primary btn-sm pull-xs-right">
-              <i class="ion-heart"></i> 32
-            </button>
-          </div>
-          <a href="post.html" class="preview-link">
-            <h1>The song you won't ever stop singing. No matter how hard you try.</h1>
-            <p>In my demo, the holy grail layout is nested inside a document, so there's no body or main tags like shown above.
-              Regardless, we're interested in the class names and the appearance of sections in the markup as opposed to
-              the actual elements themselves. In particular, take note of the modifier classes used on the two sidebars,
-              and the trivial order in which they appear in the markup. Let's break this down to paint a clear picture
-              of what's happening...</p>
-            <span>Read more...</span>
-          </a>
-        </div>
-
+        <app-articies></app-articies>
       </div>
 
       <div class="col-md-3">
-        <div class="sidebar">
-          <p>Popular Tags</p>
-
-          <div class="tag-list">
-            <a href="#" class="label label-pill label-default">programming</a>
-            <a href="#" class="label label-pill label-default">javascript</a>
-            <a href="#" class="label label-pill label-default">angularjs</a>
-            <a href="#" class="label label-pill label-default">react</a>
-            <a href="#" class="label label-pill label-default">mean</a>
-            <a href="#" class="label label-pill label-default">node</a>
-            <a href="#" class="label label-pill label-default">rails</a>
-          </div>
-        </div>
+        <app-tags></app-tags>
       </div>
+
 
     </div>
   </div>
@@ -101,12 +26,4 @@
 </div>
 
 
-<footer>
-  <div class="container">
-    <a href="/" class="logo-font">conduit</a>
-    <span class="attribution">
-      An interactive learning project from
-      <a href="https://thinkster.io">Thinkster</a>. Code & design licensed under MIT.
-    </span>
-  </div>
-</footer>
+<app-footer></app-footer>
