--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,5 +5,6 @@
     <button class="btn btn-sm btn-primary" (click)="search($event)">
       <i class="ion-search"></i>
     </button>
+    <span *ngIf="keyword ===''" class="highlight">請輸入查詢條件</span>
   </div>
 </nav>
