--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-header (keywordChuang)="searchArticles($event)"></app-header>
+<!-- <app-header (keywordChuang)="searchArticles($event)"></app-header> -->
+<app-header></app-header>
 
 <div class="home-page">
 
